--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -2,3 +2,9 @@
     box-shadow: 0 0 40px #eee;
     padding: 20px;
 }
+
+    .error {
+        padding: 10px;
+        background-color: rgba(255, 0, 0, 0.119);
+        color: rgba(234, 13, 13, 0.993);
+    }
