--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
    <div fxFlexFill fxLayout="row" fxLayoutAlign="space-between center">
-    <span>My Application</span>
+    <span>ADMISSION PROCESS</span>
     <mat-icon>home</mat-icon>
    </div>
 </mat-toolbar>
