--- a/src/app/views/home/student-list/student-list.component.html
+++ b/src/app/views/home/student-list/student-list.component.html
@@ -2,16 +2,15 @@
     <div fxFlex="40">
         <app-add-student (studentEmit)="studentEmitted($event)"></app-add-student>
     </div>
-    <div fxFlex  fxLayout="column" fxLayoutAlign="start start" [ngClass]="'student accepted'" >
+    <div fxFlex  fxLayout="column" fxLayoutAlign="start start"  >
         <h2>Stduent list</h2>
         <div style="width: 100%; height: calc(100vh - 250px); overflow-y: scroll;">
-            <div fxlayout="column" style="width: 100%" fxLayoutGap="8px" fxLayoutAlign="space-between start" *ngFor="let student of studentList">
+            <div fxlayout="column" style=" margin: 10px;padding: 10px; border-bottom: 2px solid #777" [ngClass]="{'accepted': student.action == 1}" fxLayoutGap="8px" fxLayoutAlign="space-between start" *ngFor="let student of studentList">
                 <div>
                     <h2>{{student.name}}</h2>
                     <div>
                        Date of Birth: {{student.dob | date}}
                     </div>
-                    <div>{{student.action}}</div>
                 </div>
                 <div fxLayout="row" fxLayoutGap="20px">
                     <button mat-raised-button color="primary" (click)="acceptStudent(student)">Accept</button>
